kubernetes/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
  labels:
    app: api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: ludovicodiiorio/api-server-server-repo:0.01
        ports:
        - containerPort: 8080
          name: http-api

---
# api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
spec:
  selector:
    app: api-server
  ports:
  - name: http-api
    port: 8080
    targetPort: 8080
    nodePort: 31003
    protocol: TCP
  type: NodePort
