kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      hostNetwork: true
      containers:
      - name: backend
        image: ludovicodiiorio/cloud-server-repo:0.08
        ports:
        - containerPort: 50051
          name: grpc-api

---
# api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - name: grpc-api
    port: 50051
    targetPort: 50051
    nodePort: 31008
    protocol: TCP
  type: NodePort
